--- a/public/scss/structure/_structure.scss
+++ b/public/scss/structure/_structure.scss
@@ -4,9 +4,13 @@
 @import 'body';
 //import footer styles
 @import 'footer';
+html{
+    overflow-x:hidden;
+}
 
 body{
-    width:100vw;
+    width:90vw;
+    max-width:100vw;
     margin:0;
     padding:0;
     background-color:$color__background;
